--- a/app/src/main/res/layout/activity_deck_creator.xml
+++ b/app/src/main/res/layout/activity_deck_creator.xml
@@ -9,95 +9,114 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.ftcc.battlecards.DeckCreatorActivity">
 
-    <TextView
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/cardsToBuyTxt"
-        android:id="@+id/cardsToBuyTxt"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginBottom="15dp"
-        android:textSize="16dp"
-        />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/cardsBoughtTxt"
-        android:id="@+id/cardsBoughtTxt"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="15dp"
-        android:textSize="16dp"
-        />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cardsToBuyTxt"
+            android:id="@+id/cardsToBuyTxt"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginBottom="15dp"
+            android:textSize="16dp"
+            />
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/cardsToBuyList"
-        android:layout_below="@+id/cardsToBuyTxt"
-        android:choiceMode="singleChoice"
-        android:layout_alignParentLeft="true"
-        android:layout_marginRight="225dp"
-        android:layout_marginBottom="50dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cardsBoughtTxt"
+            android:id="@+id/cardsBoughtTxt"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="15dp"
+            android:textSize="16dp"
+            />
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/cardsBoughtList"
-        android:layout_below="@+id/cardsBoughtTxt"
-        android:choiceMode="none"
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="225dp"
-        android:layout_marginBottom="50dp"/>
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/cardsToBuyList"
+            android:layout_below="@+id/cardsToBuyTxt"
+            android:choiceMode="singleChoice"
+            android:layout_alignParentLeft="true"
+            android:layout_marginRight="225dp"
+            android:layout_marginBottom="225dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/numberCardsBoughtDescripTxt"
-        android:id="@+id/numberCardsBoughtDescripTxt"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="24dp"
-        android:layout_marginTop="50dp"/>
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/cardsBoughtList"
+            android:layout_below="@+id/cardsBoughtTxt"
+            android:choiceMode="none"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="225dp"
+            android:layout_marginBottom="225dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/numberCardsBoughtTxt"
-        android:layout_centerHorizontal="true"
-        android:textSize="24dp"
-        android:layout_below="@+id/numberCardsBoughtDescripTxt"
-        android:text="@string/numberCardsBoughtTxtInitial"
-        android:layout_marginTop="5dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/numberCardsBoughtDescripTxt"
+            android:id="@+id/numberCardsBoughtDescripTxt"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:textSize="24dp"
+            android:layout_marginTop="50dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/goldAmountDescript"
-        android:id="@+id/goldAmountDescripTxt"
-        android:layout_below="@+id/numberCardsBoughtTxt"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:textSize="24dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/numberCardsBoughtTxt"
+            android:layout_centerHorizontal="true"
+            android:textSize="24dp"
+            android:layout_below="@+id/numberCardsBoughtDescripTxt"
+            android:text="@string/numberCardsBoughtTxtInitial"
+            android:layout_marginTop="5dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/goldAmountTxt"
-        android:layout_below="@+id/goldAmountDescripTxt"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
-        android:textSize="24dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/goldAmountDescript"
+            android:id="@+id/goldAmountDescripTxt"
+            android:layout_below="@+id/numberCardsBoughtTxt"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:textSize="24dp"/>
 
-    <Button
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/goldAmountTxt"
+            android:layout_below="@+id/goldAmountDescripTxt"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            android:textSize="24dp"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Start"
+            android:id="@+id/startButton"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:textSize="26dp"
+            android:enabled="false"/>
+    </RelativeLayout>
+
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start"
-        android:id="@+id/startButton"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="26dp"
-        android:enabled="false"/>
+        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true">
+
+        <fragment
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:name="edu.ftcc.battlecards.card"
+            android:id="@+id/fragment"
+            tools:layout="@layout/fragment_card" />
+    </FrameLayout>
 
 </RelativeLayout>
