--- a/app/src/main/res/layout/activity_deck_creator.xml
+++ b/app/src/main/res/layout/activity_deck_creator.xml
@@ -107,15 +107,16 @@
 
     <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:layout_centerInParent="true"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="50dp">
 
         <fragment
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:name="edu.ftcc.battlecards.card"
-            android:id="@+id/fragment"
+            android:id="@+id/cardFragment"
             tools:layout="@layout/fragment_card" />
     </FrameLayout>
 
