--- a/app/src/main/res/layout/fragment_card_view.xml
+++ b/app/src/main/res/layout/fragment_card_view.xml
@@ -2,9 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.ftcc.battlecards.card">
-
-    <!-- TODO: Update blank fragment layout -->
+    tools:context=".CardView">
 
     <RelativeLayout
         android:layout_width="match_parent"
