--- a/app/src/main/res/layout-land/activity_deck_creator.xml
+++ b/app/src/main/res/layout-land/activity_deck_creator.xml
@@ -16,7 +16,7 @@
         android:id="@+id/txtToBuy"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="10dp"
         android:textSize="12sp"
         />
 
@@ -27,7 +27,7 @@
         android:id="@+id/txtBought"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="10dp"
         android:textSize="12sp"
         />
 
@@ -38,8 +38,8 @@
         android:layout_below="@+id/txtToBuy"
         android:choiceMode="singleChoice"
         android:layout_alignParentLeft="true"
-        android:layout_marginRight="215dp"
-        android:layout_marginBottom="125dp"/>
+        android:layout_marginRight="415dp"
+        android:layout_marginBottom="25dp"/>
 
     <ListView
         android:layout_width="match_parent"
@@ -47,9 +47,8 @@
         android:layout_below="@+id/txtBought"
         android:choiceMode="none"
         android:layout_alignParentRight="true"
-        android:layout_marginLeft="215dp"
-        android:layout_marginBottom="125dp"
-        android:id="@+id/listBought" />
+        android:layout_marginLeft="415dp"
+        android:layout_marginBottom="25dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -58,18 +57,18 @@
         android:id="@+id/txtNumCardsBoughtDescrip"
         android:layout_alignParentTop="false"
         android:layout_centerHorizontal="true"
-        android:textSize="24dp"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="20dp"
+        android:textSize="24sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/txtNumCardsBought"
         android:layout_centerHorizontal="true"
-        android:textSize="24dp"
         android:layout_below="@+id/txtNumCardsBoughtDescrip"
         android:text="@string/txtCardsBoughtInitial"
-        android:layout_marginTop="5dp"/>
+        android:layout_marginTop="5dp"
+        android:textSize="24sp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -79,7 +78,7 @@
         android:layout_below="@+id/txtNumCardsBought"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
-        android:textSize="24dp"/>
+        android:textSize="24sp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -88,7 +87,7 @@
         android:layout_below="@+id/txtGoldAmountDescrip"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
-        android:textSize="24dp"/>
+        android:textSize="24sp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -96,7 +95,7 @@
         android:text="@string/btnStart"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:textSize="26dp"
+        android:textSize="18sp"
         android:enabled="false"/>
 
 </RelativeLayout>
