--- a/app/src/main/res/layout/activity_battlefield.xml
+++ b/app/src/main/res/layout/activity_battlefield.xml
@@ -1,179 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_height="fill_parent">
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="300dp"
-        android:layout_height="175dp"
-        android:layout_gravity="top"
-        android:weightSum="1">
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="3">
 
         <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_width="160dp"
-            android:layout_height="120dp">
-
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Medium Text"
-                android:id="@+id/textViewPlayerDeck"
-                android:autoText="false"
-                android:textAlignment="center" />
+            android:layout_gravity="center">
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Medium Text"
-                android:id="@+id/textViewOpponentDeck"
-                android:textAlignment="center" />
+                android:layout_height="wrap_content"
+                android:text="Text"
+                android:textSize="16sp"
+                android:layout_marginRight="15dp"
+                android:id="@+id/txtPlayerDeckSize" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Text"
+                android:textSize="16sp"
+                android:id="@+id/txtOpponentDeckSize" />
+
         </LinearLayout>
 
         <TextView
-            android:layout_width="300dp"
-            android:layout_height="55dp"
-            android:id="@+id/textViewActionRequest" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="55dp">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="15dp"
+            android:id="@+id/txtInfo"
+            android:text="Info Text"
+            android:textSize="16sp"/>
 
         <Button
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/buttonAction" />
+            android:layout_gravity="center"
+            android:layout_marginTop="15dp"
+            android:text="Button"
+            android:textSize="16sp"
+            android:id="@+id/btnAction" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="300dp"
-        android:layout_height="150dp"
-        android:layout_gravity="bottom">
-
-        <FrameLayout
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="15dp">
 
             <fragment
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
                 android:name="edu.ftcc.battlecards.CardFragment"
                 android:id="@+id/fragmentHand1"
-                android:layout_gravity="center" />
-        </FrameLayout>
-
-        <FrameLayout
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical">
+                tools:layout="@layout/card_fragment" />
 
             <fragment
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
                 android:name="edu.ftcc.battlecards.CardFragment"
                 android:id="@+id/fragmentHand2"
-                android:layout_gravity="center" />
-        </FrameLayout>
-
-        <FrameLayout
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical">
+                tools:layout="@layout/card_fragment" />
 
             <fragment
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
                 android:name="edu.ftcc.battlecards.CardFragment"
                 android:id="@+id/fragmentHand3"
-                android:layout_gravity="center" />
-        </FrameLayout>
-    </LinearLayout>
+                tools:layout="@layout/card_fragment" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="240dp"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_row="0"
-        android:layout_column="36">
+        android:layout_weight="2"
+        android:layout_marginLeft="35dp">
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="240dp"
-            android:layout_height="192dp"
-            android:layout_gravity="right"
-            android:weightSum="1">
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2">
 
-            <FrameLayout
-                android:layout_width="120dp"
-                android:layout_height="180dp"
-                android:layout_gravity="top">
+            <fragment
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:name="edu.ftcc.battlecards.CardFragment"
+                android:id="@+id/fragmentOpponentField1"
+                tools:layout="@layout/card_fragment" />
 
-                <fragment
-                    android:layout_width="120dp"
-                    android:layout_height="180dp"
-                    android:name="edu.ftcc.battlecards.CardFragment"
-                    android:id="@+id/fragmentOpponentField1"/>
-            </FrameLayout>
+            <fragment
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:name="edu.ftcc.battlecards.CardFragment"
+                android:id="@+id/fragmentOpponentField2"
+                tools:layout="@layout/card_fragment" />
 
-            <FrameLayout
-                android:layout_width="120dp"
-                android:layout_height="180dp"
-                android:layout_gravity="top">
-
-                <fragment
-                    android:layout_width="120dp"
-                    android:layout_height="180dp"
-                    android:name="edu.ftcc.battlecards.CardFragment"
-                    android:id="@+id/fragmentOpponentField2"/>
-            </FrameLayout>
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="240dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="right"
-            android:weightSum="1">
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2">
 
-            <FrameLayout
-                android:layout_width="120dp"
-                android:layout_height="180dp"
-                android:layout_gravity="bottom">
+            <fragment
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:name="edu.ftcc.battlecards.CardFragment"
+                android:id="@+id/fragmentPlayerField1"
+                tools:layout="@layout/card_fragment" />
 
-                <fragment
-                    android:layout_width="120dp"
-                    android:layout_height="180dp"
-                    android:name="edu.ftcc.battlecards.CardFragment"
-                    android:id="@+id/fragmentPlayerField1"/>
-            </FrameLayout>
+            <fragment
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:name="edu.ftcc.battlecards.CardFragment"
+                android:id="@+id/fragmentPlayerField2"
+                tools:layout="@layout/card_fragment" />
 
-            <FrameLayout
-                android:layout_width="120dp"
-                android:layout_height="180dp"
-                android:layout_gravity="bottom">
-
-                <fragment
-                    android:layout_width="120dp"
-                    android:layout_height="180dp"
-                    android:name="edu.ftcc.battlecards.CardFragment"
-                    android:id="@+id/fragmentPlayerField2"/>
-            </FrameLayout>
         </LinearLayout>
+
     </LinearLayout>
 
-</GridLayout>
+</LinearLayout>
