--- a/app/src/main/res/layout/activity_battlefield.xml
+++ b/app/src/main/res/layout/activity_battlefield.xml
@@ -22,13 +22,13 @@
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:layout_marginRight="15dp"
-                android:id="@+id/txtPlayerDeckSize" />
+                android:id="@+id/txtHumanDeckSize" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:id="@+id/txtOpponentDeckSize" />
+                android:id="@+id/txtComputerDeckSize" />
 
         </LinearLayout>
 
@@ -60,7 +60,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="3"
                 android:name="edu.ftcc.battlecards.CardFragment"
-                android:id="@+id/fragmentHand1"
+                android:id="@+id/fragHand1"
                 tools:layout="@layout/card_fragment" />
 
             <fragment
@@ -68,7 +68,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="3"
                 android:name="edu.ftcc.battlecards.CardFragment"
-                android:id="@+id/fragmentHand2"
+                android:id="@+id/fragHand2"
                 tools:layout="@layout/card_fragment" />
 
             <fragment
@@ -76,7 +76,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="3"
                 android:name="edu.ftcc.battlecards.CardFragment"
-                android:id="@+id/fragmentHand3"
+                android:id="@+id/fragHand3"
                 tools:layout="@layout/card_fragment" />
 
         </LinearLayout>
@@ -101,7 +101,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:name="edu.ftcc.battlecards.CardFragment"
-                android:id="@+id/fragmentOpponentField1"
+                android:id="@+id/fragComputerField1"
                 tools:layout="@layout/card_fragment" />
 
             <fragment
@@ -109,7 +109,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:name="edu.ftcc.battlecards.CardFragment"
-                android:id="@+id/fragmentOpponentField2"
+                android:id="@+id/fragComputerField2"
                 tools:layout="@layout/card_fragment" />
 
         </LinearLayout>
@@ -125,7 +125,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:name="edu.ftcc.battlecards.CardFragment"
-                android:id="@+id/fragmentPlayerField1"
+                android:id="@+id/fragHumanField1"
                 tools:layout="@layout/card_fragment" />
 
             <fragment
@@ -133,7 +133,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:name="edu.ftcc.battlecards.CardFragment"
-                android:id="@+id/fragmentPlayerField2"
+                android:id="@+id/fragHumanField2"
                 tools:layout="@layout/card_fragment" />
 
         </LinearLayout>
